--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ stages:
 variables:
   DOCKER_DRIVER: overlay2
 
-services:
-  - docker:19.03.12-dind
+image: docker:27.3.1 
+
+services: - docker:27.3.1-dind
 
 before_script:
   - docker info
