--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,8 @@ variables:
 
 image: docker:27.3.1 
 
-services: - docker:27.3.1-dind
+services: 
+  - docker:27.3.1-dind
 
 before_script:
   - docker info
