--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ test:
   stage: test
   image: python:3.9
   script:
+    - pip install --upgrade pip
     - pip install -r requirements.txt
     - pytest tests/
   only:
