--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ test:
   script:
     - pip install --upgrade pip
     - pip install -r requirements.txt
+    - pip install pytest # Install pytest
     - pytest tests/
   only:
     - main
