--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ services:
 test:
   stage: test
   image: python:3.9
+  variables: 
+    PYTHONPATH: "${CI_PROJECT_DIR}"
   script:
     - pip install --upgrade pip
     - pip install -r requirements.txt
