--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,8 @@ scan:
     - docker pull $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
     - docker pull aquasec/trivy 
     - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image --exit-code 1 --severity HIGH,CRITICAL $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
-  only: - main
+  only: 
+    - main
 
 deploy:
   stage: deploy
