--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 stages:
   - test
-  - build
-  - push
+  - build & push
   - scan
   - deploy
 
@@ -30,28 +29,22 @@ test:
     - main
 
 build: 
-  stage: build 
+  stage: build & push
   script: 
-    - docker build -t $DOCKER_REPO:$DOCKER_TAG . 
-  only: 
-    - main 
-
-push: 
-  stage: push 
-  script:
+    - docker build -t myapp:$DOCKER_TAG . 
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $DOCKER_REGISTRY 
-    - docker tag $DOCKER_REPO:$DOCKER_TAG $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
-    - docker push $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
-  only:
+    - docker tag myapp:$DOCKER_TAG hannachiyou/myapp:$DOCKER_TAG 
+    - docker push hannachiyou/myapp:$DOCKER_TAG 
+  only: 
     - main 
 
 scan: 
   stage: scan 
   script: 
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $DOCKER_REGISTRY
-    - docker pull $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
+    - docker pull hannachiyou/myapp:$DOCKER_TAG 
     - docker pull aquasec/trivy 
-    - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image --exit-code 1 --severity HIGH,CRITICAL $DOCKER_REGISTRY/$DOCKER_REPO:$DOCKER_TAG 
+    - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image --exit-code 1 --severity HIGH,CRITICAL hannachiyou/myapp:$DOCKER_TAG 
   only: 
     - main
 
