--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,34 @@
 version: '3.8'
 
-networks:
-  monitoring:
-
+networks: 
+  project: 
+    external: true
 services:
   web:
-    build: .
+    build: 
+      context: ./app
     ports:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
       - MONGO_URI=mongodb://mongo:27017/CI-CD_Project/article
     networks:
-      - monitoring
+      - project
     depends_on:
       - mongo
 
-
-
   mongo:
+    build:
+      context: ./mongo 
+    container_name: mongo-container
     image: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - ./mongo/init.js:/docker-entrypoint-initdb.d/init.js
+      - ./mongo/CI-CD_Project.article.json:/docker-entrypoint-initdb.d/CI-CD_Project.article.json
     networks:
-      - monitoring
+      - project
 
   prometheus:
     image: prom/prometheus
@@ -32,22 +37,21 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - monitoring
-
+      - project
 
   grafana:
     image: grafana/grafana
     ports:
       - "3000:3000"
     networks:
-      - monitoring
+      - project
 
   cadvisor:
     image: gcr.io/google-containers/cadvisor
     ports:
       - "8080:8080"
     networks:
-      - monitoring
+      - project
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /:/rootfs:ro
