added the env to get the secrets on the pipeline

--- a/.github/workflows/project-pipeline.yaml
+++ b/.github/workflows/project-pipeline.yaml
@@ -43,6 +43,7 @@ jobs:
     env:
       APP_IMAGE_NAME: myapp
       DB_IMAGE_NAME: mydb
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
     steps:
       # Step 1: Checkout the code
