--- a/app/dockerfile
+++ b/app/dockerfile
@@ -4,6 +4,10 @@ FROM python:3.9
 # Set the working directory
 WORKDIR /app
 
+# Define build arguments for the certificates
+ARG CERT_PEM
+ARG KEY_PEM
+
 # Copy the requirements file
 COPY requirements.txt .
 
@@ -13,8 +17,12 @@ RUN pip install -r requirements.txt
 # Copy the rest of the application code
 COPY . .
 
+# Save the certificates from the build arguments
+RUN echo "$CERT_PEM" > /app/cert.pem \
+    && echo "$KEY_PEM" > /app/key.pem
+
 # Expose the port the app runs on
-EXPOSE 5000
+EXPOSE 443
 
 # Define the command to run the app
 CMD ["python", "app.py"]
